# myECE408

./: .gitignore  Cuda_chapter7_note.md  README.md  Use Nsight system and Nsight compute in WSL2.md
MP0/: CMakeLists.txt  mp0.cu
MP1/: CMakeLists.txt  MP1  Readme.md  cmake_install.cmake  mp1.cu  run_datasets
MP1/bench/: profile_0.nsys-rep  profile_1.nsys-rep  profile_2.nsys-rep  profile_3.nsys-rep  profile_4.nsys-rep  profile_5.nsys-rep  profile_6.nsys-rep  profile_7.nsys-rep  profile_8.nsys-rep  profile_9.nsys-rep
MP2/: CMakeLists.txt  MP2  Readme.md  cmake_install.cmake  mp2.cu  run_datasets
MP3/: CMakeLists.txt  MP3  cmake_install.cmake  mp3.cu  run_datasets
MP4/: CMakeLists.txt  MP4  Nsight_compute_analysis  cmake_install.cmake  mp4.cu  run_datasets  template.cu
MP4/bench/: compute_profile_0.ncu-rep  compute_profile_1.ncu-rep  compute_profile_2.ncu-rep  compute_profile_3.ncu-rep  compute_profile_4.ncu-rep  compute_profile_5.ncu-rep  profile_0.nsys-rep  profile_1.nsys-rep  profile_2.nsys-rep  profile_3.nsys-rep  profile_4.nsys-rep  profile_5.nsys-rep
MP7/: Readme.md
Project/optimization_GPU/: baseline.cu
mini-dnn/: CMakeLists.txt  inference.cc  readme.md
mini-dnn-cpp-master/: CMakeLists.txt  inference.cc  train.cc  train_model.cc
mini-dnn-cpp-master/src/: mnist.h  network.cc
mini-dnn-cpp-master/src/layer/: GPU_conv_baseline.cu  gpu_conv.cc  gpu_conv.h
mini-dnn/src/: mnist.cc  network.h
mini-dnn/src/layer/: GPU_conv_baseline.cu  conv.cc  conv.h  gpu-new-forward.h  gpu_conv.cc  gpu_conv_optimization.cu
notes/: Cuda_chapter5_note.md  Use Nsight system and Nsight compute in WSL2.md
translations/zh/: README.md
